# amica

./: .gitignore  README.md  config.yaml  config_low_vram.yaml  config_tuxedo_laptop.yaml  download_thorsten_voice.sh  pyproject.toml  requirements.txt  run.sh
assets/: amica_prompt_de.txt  amica_prompt_en.txt  amica_prompt_extra_info_de.txt  amica_prompt_extra_info_en.txt  amica_prompt_longer_answers_de.txt  amica_prompt_qwen_de.txt  amica_prompt_with_datetime_de.txt  amica_qa_de.csv  amica_qa_en.csv  data_de.txt  data_en.txt  data_with_schedules.txt
docs/: conf.py  index.rst  requirements.txt
src/: amica_answering_module.py  amica_main_loop.py  amica_speech_generation_module.py  audio_tools.py  data_packager.py  dynamic_answers.py  gui_opencv.py  logging_module.py  whisper_turbo_german_hv.py
