[project]
name = "amica"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "belay>=0.30.0",
    "langchain>=1.2.10",
    "langchain-core>=1.2.16",
    "langchain-huggingface>=1.2.0",
    "langchain-ollama>=1.0.1",
    "librosa>=0.11.0",
    "ollama>=0.6.1",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "piper-tts>=1.4.1",
    "pyaudio>=0.2.14",
    "pygame-ce>=2.5.6",
    "sentence-transformers>=5.2.3",
    "sounddevice>=0.5.5",
    "torch>=2.10.0",
    "transformers>=4.57.6",
]
